Adjusting font-size to ensure readability on mobile.

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -347,9 +347,14 @@
 //   color: white;
 // }
 
+// .react-responsive-modal-modal .modalText {
+//   max-width: 90%;
+//   // font-size: 90%;
+// }
+
 .react-responsive-modal-modal .modalText {
-  max-width: 90%;
-  // font-size: 90%;
+  max-width: 85%;
+  font-size: 1em;
 }
 
 // .modalTitle {
@@ -365,7 +370,7 @@
   color: white;
   width: 50vw;
   border-radius: 50%;
-  margin-top: -1vw !important;
+  // margin-top: -1vw !important;
   height: 50vw;
   max-width: 615px !important;
   max-height: 615px !important;
