--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,7 +8,7 @@ body {
   font-family: "Agrandir", sans-serif, "Montserrat", sans-serif;
   overflow: hidden;
   margin: 0;
-  font-size: 90%;
+  // font-size: 90%;
 }
 
 button {
